# rusty-graph-coloring

./: .gitignore  README.md  sample-SLVO-graph.txt  sample-SLVO.txt
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
exec/: benchmarks  graph-coloring
graph-coloring/: .gitignore  Cargo.toml  README.md
graph-coloring/src/: graph.rs  input.rs  lib.rs  main.rs  ordering.rs
